BibliotecaControlador refactored.